--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  
 }
 
 .header {
@@ -85,6 +86,8 @@
   height: 100%;
   overflow-y: scroll;
   border-radius: 0.5rem;
+  padding: 2rem;
+  background-color: hsl(218, 13%, 54%);
 }
 
 .messagelistloading {
