--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,13 +88,25 @@
   border-radius: 0.5rem;
   padding: 2rem;
   background: transparent;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
 }
 .messagelist::-webkit-scrollbar {
-  display: none;
+  width: 20px;
+  height: 20px;
+}
+.messagelist::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: transparent);
 }
 
+.messagelist::-webkit-scrollbar-thumb {
+  background: rgb(174,177,215,0.5);
+  border-radius: 10px;
+  border: 1px solid #f6f7ed;
+}
+
+.messagelist::-webkit-scrollbar-thumb:hover {
+  background: rgba(120, 123, 165, 0.5);
+}
 .messagelistloading {
   display: flex;
   width: 100%;
