--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 1rem;
   background: transparent;
+  max-width: 100vw;
 }
 
 .header {
@@ -95,7 +96,7 @@
 }
 .messagelist::-webkit-scrollbar-track {
   border-radius: 10px;
-  background: transparent);
+  background: transparent;
 }
 
 .messagelist::-webkit-scrollbar-thumb {
@@ -280,7 +281,7 @@
     width: 100%;
     text-align: center;
   }
-        .messagelist {
+ .messagelist {
           padding: 0.5rem;
-        }
+}
 }
